# chess-database-backend

./: .gitignore  .hindent.yaml  .hlint.yaml  .stylish-haskell.yaml  README.md  backend.cabal  package.yaml  stack.yaml
apps/: SpeedTest.hs
data/: openings.txt
data/games/dev/: tata_small.pgn
data/games/prod/: tata2018.pgn
scripts/: dbbackup.sh  restoredb.sh
snaplets/heist/templates/: default.tpl  passwordchangegood.tpl  resetpassword.tpl
sql/: moveevals.sql
src/: AppTypes.hs  Application.hs  Main.hs  Types.hs
src/Services/: DatabaseHelpers.hs  Helpers.hs  Openings.hs  Service.hs  Sql.hs  StatsHelpers.hs  Tasks.hs  Types.hs
src/Test/: Fixtures.hs  Helpers.hs
test/: FakeData.hs  FillDB.hs  FillDBFake.hs  Helpers.hs  RealData.hs  Spec.hs  wipe_table.sh  wipe_table.sql
test/files/: game.pgn  tata.pgn
