Name:                backend
Version:             0.2
Description:         Provides the snap backend for the chess web app
License:             AllRightsReserved
Author:              Chris Goldammer
Maintainer:          goldammer.christian@gmail.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules: 
      Application
    , AppTypes
    , Services.Service
    , Services.Sql
    , Services.Types
    , Services.StatsHelpers
    , Services.Helpers
    , Services.DatabaseHelpers
    , Services.Openings
    , Services.Tasks
    , Test.Helpers
    , Test.Fixtures
  build-depends:
      base                      >= 4     && < 5
    , bytestring                >= 0.9.1 && < 0.11
    , monad-control             >= 1.0   && < 1.1
    , mtl
    , snap                      >= 1.0
    , snap-core                 >= 1.0   && < 1.1
    , snap-server               >= 1.0   && < 1.1
    , lens
    , esqueleto
    , chess
    , either
    , attoparsec
    , comonad
    , transformers
    , lens-tutorial
    , aeson
    , text
    , postgresql-simple
    , time
    , heist
    , map-syntax
    , string-conversions
    , snap
    , parsec
    , containers
    , persistent
    , persistent-template
    , persistent-postgresql
    , servant-snap
    , snaplet-persistent
    , snaplet-postgresql-simple
    , servant
    , esqueleto
    , resourcet
    , conduit
    , raw-strings-qq
    , js-jquery
    , monad-logger
    , configurator
    , turtle
    , system-filepath
    , template
    , listsafe
    , directory
    , http-client
    , mime-mail-ses >= 0.4.1
    , mime-mail
    , http-client-tls
    , smtp-mail
    , split

Executable app
  hs-source-dirs: src
  default-language: Haskell2010
  other-modules:     
      Application
    , Services.Service
    , Services.Types
    , Services.Helpers
    , Services.DatabaseHelpers
    , Services.Openings
    , Services.Sql
    , Services.StatsHelpers
    , Services.Tasks
  build-depends:
      base                      >= 4     && < 5
    , bytestring                >= 0.9.1 && < 0.11
    , monad-control             >= 1.0   && < 1.1
    , mtl
    , snap                      >= 1.0
    , snap-core                 >= 1.0   && < 1.1
    , snap-server               >= 1.0   && < 1.1
    , lens
    , attoparsec
    , comonad
    , either
    , chess
    , lens-tutorial
    , aeson
    , text
    , postgresql-simple
    , time
    , heist
    , map-syntax
    , string-conversions
    , snap
    , parsec
    , containers
    , persistent
    , persistent-template
    , persistent-postgresql
    , servant-snap
    , snaplet-persistent
    , snaplet-postgresql-simple == 1.0.1
    , servant
    , esqueleto
    , resourcet
    , conduit
    , raw-strings-qq
    , js-jquery
    , monad-logger
    , configurator
    , turtle
    , transformers
    , system-filepath
    , template
    , listsafe
    , directory
    , http-client
    , mime-mail-ses >= 0.4.1
    , mime-mail
    , http-client-tls
    , smtp-mail
    , split
  main-is: Main.hs


Executable fill_db
  hs-source-dirs: test
  main-is: FillDB.hs
  default-language: Haskell2010
  build-depends:
      base
    , backend
    , monad-logger
    , chess
    , persistent
    , attoparsec
    , persistent-template
    , persistent-postgresql
    , time
    , text
    , bytestring                >= 0.9.1 && < 0.11
    , postgresql-simple
    , resourcet
    , transformers
    , snaplet-persistent
    , mtl
    , either
    , optparse-applicative
    , raw-strings-qq
    , system-filepath

Executable speed_test
  hs-source-dirs: apps
  main-is: SpeedTest.hs
  default-language: Haskell2010
  build-depends:
      base
    , backend
    , esqueleto
    , persistent
    , persistent-postgresql


test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language: Haskell2010
  build-depends:
      base
    , backend
    , turtle
    , esqueleto
    , directory
    , time
    , text
    , hspec
    , hspec-snap
    , snap-core
    , snap
    , bytestring
    , snaplet-persistent
    , persistent
    , persistent-postgresql
    , aeson
    , system-filepath
    , attoparsec
    , either
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N


  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

